--- a/.github/workflows/lines.yml
+++ b/.github/workflows/lines.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.lines.svg
+          filename: metrics.plugin.lines.history.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: repositories
+          base: ""
           plugin_lines: yes
+          plugin_lines_sections: repositories, history
+          plugin_lines_repositories_limit: 2
+          plugin_lines_history_limit: 1
