--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Update Metrics
 on:
-  schedule: [{cron: "30 4 * * *"}]
+  schedule: [{cron: "30 4 * * 1,4"}]
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
